Fixed overflow issue

--- a/src/components/TaskTags/TaskTags.css
+++ b/src/components/TaskTags/TaskTags.css
@@ -25,5 +25,6 @@
   margin-right: 10px;  
   margin-top: 5px;
   margin-bottom: 5px;
+  text-align: center;
 }
 
