--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+html, body {
   
   font-size: 14px;
   
@@ -12,6 +12,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  overflow-x: hidden;
 }
 
 code {
